Move the barplot to the center of the screen

--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,12 @@
+#dataviz {
+    margin: auto;
+}
+
+#dataviz svg {
+    display: block;
+    margin: auto;
+}
+
 rect:hover {
     fill: orange;
 }
