--- a/client/style.css
+++ b/client/style.css
@@ -2,14 +2,14 @@ body {
     background-color: #558e90;
 }
 
-#category_selector_container {
+#top_row_container {
     width: 100%;
     text-align: center;
     margin: 0 auto;
     background-color: transparent;
 }
 
-.category_selector {
+.top_row_box {
     display: inline-block;
     font-size: large;
     width: 10em;
@@ -24,6 +24,24 @@ body {
 .category_options {
     height: 4em;
     background-color: chocolate; /* TODO just a placeholding color */
+}
+
+#country_select_container {
+    display: inline-block;
+}
+
+#country_select {
+    text-align: center;
+    background-color: #4e9b89;
+    color: white;
+    width: 10em;
+    border: none;
+    margin: 0px;
+    font-size: 20px;
+    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
+    -webkit-appearance: button;
+    appearance: button;
+    outline: none;
 }
 
 #dataviz {
