--- a/client/style.css
+++ b/client/style.css
@@ -45,9 +45,21 @@ body {
     outline: none;
 }
 
+/* Styles for the options for each category. */
 .category_options {
     height: 4em;
-    background-color: chocolate; /* TODO just a placeholding color */
+    height: max-content;
+    width: max-content;
+    margin: 2em auto 0.5em auto;
+    text-align: center;
+}
+
+.submit_button {
+    border: none;
+    border-radius: 5%;
+    background-color: #69b3a2;
+    padding: 1em 2em;
+    margin-top: 1em;
 }
 
 /* Styles for the data visualization section. */
