--- a/client/style.css
+++ b/client/style.css
@@ -43,6 +43,7 @@ body {
     -webkit-appearance: button;
     appearance: button;
     outline: none;
+    font-weight: bold;
 }
 
 /* Styles for the options for each category. */
@@ -60,6 +61,9 @@ body {
     background-color: #69b3a2;
     padding: 1em 2em;
     margin-top: 1em;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: 1em;
 }
 
 /* Styles for the data visualization section. */
